# Multi-tasker

./: .env_example  README.MD  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1fa879cfdfb6_create_profile_table.py  61773c9ae062_init_alembic.py  6327eb4f9a50_create_category_table.py  790ff4f24087_init.py  7efa3a80eab9_create_project_table.py  933bc7a65b34_create_user_table.py  a9ec2cf61565_create_user.py  cb90b42b2a23_create_profile.py  ef0f372961ac_create_task_table.py
src/: config.py  redis.py
src/api/: __init__.py  views.py
src/api/profile/: dependencies.py  router.py  schemas.py  services.py
src/api/project/: router.py  services.py
src/api/repositories/: user_repository.py
src/api/routers/: auth_router.py  category_router.py  profile_router.py  project_router.py  task_router.py  user_router.py
src/api/schemas/: category_schemas.py  pagination_schemas.py  profile_schemas.py  project_schemas.py  task_schemas.py  user_schemas.py
src/api/services/: auth_service.py  category_service.py  profile_service.py  project_service.py  task_service.py  user_service.py
src/api/user/: auth_router.py  crud.py  dependencies.py  router.py  schemas.py  security.py  services.py
src/api/utils/: security.py
src/api/utils/smtp/: email_body.py  send_email.py  task.py
src/database/: db.py
src/models/: __init__.py  category.py  profile.py  project.py  task.py  user.py
